handling erros in the cfg file

--- a/assets/config.json
+++ b/assets/config.json
@@ -6,5 +6,12 @@
     "database": "nodejs",
     "user": "root",
     "password": ""
+  },
+  "errors": {
+    "wrongID": "Wrong id",
+    "wrongMaxValue": "Wrong max value",
+    "nameAlreadyTaken": "Name already taken",
+    "noNameValue": "No name value",
+    "sameName": "Same name"
   }
 }
