--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-oas-generator": "^1.0.23",
     "nodemon": "^2.0.2",
     "promise-mysql": "^4.1.3"
   },
