--- a/_front/package.json
+++ b/_front/package.json
@@ -14,7 +14,8 @@
     "babel-register": "^6.26.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "twig": "^1.15.0"
   },
   "devDependencies": {
     "morgan": "^1.9.1"
