--- a/_front/package.json
+++ b/_front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "_front",
+  "name": "front",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-register": "^6.26.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
